# Asistente-de-ventas-y-Atenci-n-al-cliente

./: CHAT_HISTORY_SETUP.md  GUIONES_PROFESIONALES_ESTRUCTURADOS.md  README.md  create_test_orders.py  docker-compose.yml  init.db.py  init_db_2.py  init_test_db.py  migrate_db_add_barcode_discounts.py  migrate_db_add_chat_history.py  pyproject.toml  pytest.ini  requirements.txt  reset_database.sh  setup_db_all.py
backend/: .env.dev  README.md  container.py  main.py  requirements.txt
backend/agents/: __init__.py  base.py  orchestrator.py  retriever_agent.py  sales_agent.py
backend/api/: __init__.py
backend/config/: __init__.py  logging_config.py  rate_limit_config.py  redis_config.py  settings.py
backend/database/: __init__.py  connection.py  session.py
backend/domain/: __init__.py  agent_schemas.py  chat_schemas.py  guion_schemas.py  order_schemas.py  product_schemas.py
backend/llm/: __init__.py  provider.py
backend/services/: __init__.py  chat_history_service.py  elevenlabs_service.py  order_service.py  product_comparison_service.py  product_service.py  rag_service.py  search_service.py  session_service.py  tenant_data_service.py  user_service.py
backend/tests/: __init__.py  conftest.py
backend/tools/: __init__.py  agent2_recognition_client.py
documents/: CHAT_HISTORY_DOCUMENTACION.md  DEPLOYMENT.md  GUIONES_NATURALES.md  TEST_GUION_PERSISTENCE.md  deploy.txt  indicaciones.md  propuesta.txt
frontend/: package-lock.json  package.json
notebooks/: 01_Sales_Agent_Brain.ipynb  02_Sales_Agent_Memory.ipynb  03_Integrated_Sales_Agent_LangGraph.ipynb
(+64 files in other folders)
